--- a/_posts/2021-01-06-post1.md
+++ b/_posts/2021-01-06-post1.md
@@ -89,7 +89,7 @@ else
 
 last = mid, fisrt = mid로 바꾸어 코드를 실행시키면 처음 값은 나올텐데 두번째 값이 무한루프를 형성하여 종료되지 않음을 볼 수 있다. 
 
-처음으로 자료구조를 공부해봤는데, 쉽지않다. 벌써부터 올해가 아득하다. 오늘 이 다음 예제를 보고 또 이해해야한다. 너무 가혹하다. 코딩의 세계는 너무 험난하다. 이만하고 다음껄 공부하러 가야겠다. 
+처음으로 자료구조를 공부해봤는데, 쉽지않다. 벌써부터 올해가 아득하다. 오늘 이 다음 예제를 보고 또 이해해야한다. 너무 가혹하다. 코딩의 세계는 너무 험난하다. 이만하고 다음내용을  공부하러 가야겠다. 
     
 
 
