--- a/_posts/2020-01-07-post2.md
+++ b/_posts/2020-01-07-post2.md
@@ -1,1 +1,105 @@
+---
+title: 두번째 포스팅
+---
+# 2. 두번째 포스팅
+오늘은 재귀에 대해 공부했다. c언어를 공부하면서 재귀에 대해 많이공부했는데, 자료구조에서도 재귀가 쓰이나보다. 
+
+재귀는 말그대로 다시 호출하는 것으로, 코딩에서 쓰이는 방법은 함수를 다시 호출한다해서 재귀함수라고 불린다. 쓰이는 방식은
+
+    void Function(void)
+
+    {
+        printf("Function call\n")l
+        Function();
+    }
+Function 이라는 함수를 지정하고 이 안에 다시 자신인 Function을 호출하는 방식이다. 이렇게 사용하면 함수가 무한정으로 반복된다는 문제점이 있기 때문에 이러한 재귀의 탈출을 위해 탈출 조건을 만들어 보면,
+    
+    #include<stdio.h>
+
+    void Function(int n)
+    {
+        if(n<=0)
+            return;
+        printf("Function num = %d\n",n);
+        Function(n-1);
+        
+    }
+    int main(void)
+    {
+        Function(3);
+        return 0;
+    }
+결과물은
+
+    Function num = 3
+    Function num = 2
+    Function num = 1
+가 된다. 
+
+이 코딩 내에서 재귀함수의 탈출 조건이 되는 부분은 
+
+    if(n<=0)
+        return;
+
+이라는부분이다. n의 수가 0보다 작거나 같으면 재귀함수에서 탈출해 reutrn 하는 부분이다. 이때 내가 main함수에 n=3을 대입했고, Function 함수의 마지막에 n-1을 대입해 3->2->1로 숫자가 작아지게 하였기 때문에 마지막으로 n=0이되면 이 재귀함수를 탈출하게 된다. 
+
+다른 코딩의 예시로는 팩토리얼 함수를 예로 들 수 있다. 
+
+팩토리얼 함수란, f(3)=3x2x1,f(4)=4x3x2x1...이렇게 진행되는 함수로, 만약 f(n) 이라는 팩토리얼 함수가 있다고 가정하면, n>=1 인 자연수일때, f(n)=nxf(n-1) 과같이 재귀함수를 이용 할 수 있고, 만약 n=0이면 1 이되게 만들어 주면된다. 예시 코딩을 보면,
+
+    #include<stdio.h>
+    int Factorial(int n)
+    {
+        if (n == 0)
+            return 1;
+        else
+            return n * Factorial(n-1);
+    }
+    int main(void)
+    {
+        for(int i = 1;i<=10;i++)
+            printf("%d! = %d\n",i,Factorial(i));
+    }
+
+이 코딩의 결과값은 
+
+    1! = 1
+    2! = 2
+    3! = 6
+    4! = 24
+    5! = 120
+    6! = 720
+    7! = 5040
+    8! = 40320
+    9! = 362880
+    10! = 3628800
+이 된다. Factorial 함수를 재귀함수로 사용하여 나타낸 것이다. 즉 하나의 동일한 패턴으로 계속되는 경우에는 이와 같이 재귀함수로 코딩을 짜서 표현할 수 있다. 
+이와 마찬가지로 마지막으로 피보나치 수열을 코딩으로 나타내보자. 
+
+피보나치수열은 수식으로 이렇게 나타낼 수 있다. Fibo(n)=Fibo(n-1)+Fibo(n-2) 그런데 이때 처음 시작하는 두개의 숫자를 주고 시작해야되기 때문에 n=1 ,n=2일때 값을 0,1로 정의해주어야한다. 이를 코딩으로 짜보면
+
+    #include<stdio.h>
+    int Fibo(int n)
+    {
+        if(n==1)
+            return 0;
+        else if(n==2)
+            return 1;
+        else
+            return Fibo(n-1)+Fibo(n-2);
+    }
+    int main(void)
+    {
+        int i;
+        for(i=1;i<20;i++)
+            printf("%d  ",Fibo(i));
+
+        return 0;
+    }
+이 코딩의 결과값은
+    
+    0  1  1  2  3  5  8  13  21  34  55  89  144  233  377  610  987  1597  2584
+이 된다. 
+
+오늘 공부한 재귀함수인 팩토리얼함수와 재귀함수는 함수간에 반복되는 특징으로 재귀함수를 만들어 가는 방식이었다. 이 함수들이 가지고 있는 특징들에대해 분석해 코딩을 짠는것이 조금 재미있었다. 내일은 재귀의 활용과 하노이탑에 대해서 공부해봐야겠다 책만봤는데도 머리가 벌써 지끈하다.......
 
