--- a/_posts/2020-01-09-post3.md
+++ b/_posts/2020-01-09-post3.md
@@ -1,1 +1,90 @@
+---
+title: 세번째 포스팅
+---
+# 3. 세번째 포스팅
 
+오늘은 재귀의 활용중에서 이진 탐색 알고리즘의 재귀적 구현과 하노이 타워에 대해 공부해보았다. 
+
+이진탐색알고이즘의 재귀적 구현은 앞에서 보았던 이진탐색알고리즘을 재귀함수를 이용하여 구현하는 방식이다. 예제 코딩을 보면 앞에서 구현했던 함수와 다른 점을 알 수 있을 것이다.
+
+    #include<stdio.h>
+    int BSearchRecur(int ar[],int first,int last,int target)
+    {
+        int mid;
+        if(first>last)
+            return -1;
+        mid=(first+last)/2;
+
+        if(ar[mid]==target)
+            return mid;
+        else if(target<ar[mid])
+            return BSearchRecur(ar,first,mid-1,target);
+        else
+            return BSearchRecur(ar,mid+1,last,target);
+    }
+    int main(void)
+    {
+        int arr[]={1,3,5,7,9};
+        int idx;
+
+        idx=BSearchRecur(arr,0,sizeof(arr)/sizeof(int)-1,7);
+        if(idx==-1)
+            printf("탐색실패\n");
+        else
+            printf("타겟 저장 인덱스: %d\n",idx);
+
+        idx=BSearchRecur(arr,0,sizeof(arr)/sizeof(int)-1,4);
+        if(idx==-1)
+            printf("탐색실패\n");
+        else
+            printf("타겟 저장 인덱스: %d\n",idx);
+
+        return 0;
+        
+    }
+
+그냥 반복문만 사용했던 첫번째 포스팅과는 달리 함수안에 함수를 부르는재귀함수가 사용되었다. 반복문보다 복잡하다고 느낄 수 있지만 더 심화된 내용을 공부할때는 더 유용하게 쓰일 것이다. 
+
+다음은 하노이 탑을 공부했다. 하노이 탑은 원판들과 세개의 축으로 이루어져있다. 예를들어 a,b,c 축이 있고 a축에 3개의 원판이 크기순서대로 꽂아있다고 하면, 이때 우리는 작은원판위에는 큰 원판이 올 수 없다는 조건을 가지고 a축에있던 원판 3개를 모두 c축으로 옮겨야한다. 
+
+이 문제를 해결하기 위해서는 첫번째로 a축에꽂혀있던 원판 세개중 작은 2개를 축으로 옮겨주고, 제일아래있던 원판을 c원판으로 옮기고, b축에서 위에있던 가장작은 원판을 다시 a축으로 옮기고, b축에남은 중간크기의 원판을 c축으로 옮기고 마지막으로 제일 작은 a축에 꽂혀있던 원판을 c축으로 옮기면된다. 
+
+이때 만약 원판이 4개가 된다면 어떨까라고 생각하는 분들이 계실텐데, 이때 원판세개를 b축으로 옮기고 제일큰 원판을 다시 c축으로 옮긴다면, 남은 원판 3개를 앞에서 말한 세개의 원판이 있을 떄와 마찬가지로 축만옮겨 원판을 완성시켜주면된다. 이러한 방식에서 우리는 재귀함수를 사용할 수 있는 것이다.
+
+이를 수식을 이용해 나타낸다면, n개의 원판들이 꽂혀있다고 가정하면, 
+
+    1. 가장큰 원판을 제외한 n-1개의 원판을 축a->축b 로 옮겨준다.
+    2. 가장 큰 원판을 축a->축c 로 옮겨준다.
+    3. 축b에있는 원판들을 축c로 옮겨준다.
+
+3번은 이상황을 반복하는 재귀함수를 호출하면 해결된다. 이 예제의 코딩을 살펴보면,
+
+    #include<stdio.h>
+    void Hanoi(int num,char from,char by,char to)
+    {
+        if(num==1)
+        {
+            printf("원반1을 %c 에서 %c로 이동\n",from,to);
+        }
+        else
+        {
+            Hanoi(num-1,from,to,by);//1번
+            printf("원반%d를 %c 에서 %c로 이동\n",num,from,to);//2번
+            Hanoi(num-1,by,from,to);//3번
+        }
+    }
+    int main(void)
+    {
+        
+        int n;
+        printf("원반이 몇개 꽂혀있습니까?");
+        scanf("%d",&n);
+        Hanoi(n,'A','B','C');
+        return 0;
+        
+
+    }
+
+이 코딩에서 알 수 있는것은 //1번에 의해 n-1개의 원반이 A->B로 옮겨지고, //2번에의해  A에 꽂혀있는 가장 큰 원반을 A->C로 이동시키고, //3번에 의해 1번에서 B로 옮겨진 원반들을 다시 C로 옮기는 작업을 해주면된다. 
+
+나는 코딩을 이제 막 시작했기 때문에 하노이탑의 이러한 성질을 공부하기까지 2일 이라는 시간이 걸렸다.... 그래서 포스팅을 제대로 하지 못했다. 너무 어려웠다 진짜ㅠㅠ내일은 진짜 다시 연결리스트부터 다시 공부해야겠다 ㅠㅠ 하노이 탑진짜 어렵다 이게맞나,,,,
