--- a/_posts/2020-01-12.md
+++ b/_posts/2020-01-12.md
@@ -1,1 +1,193 @@
+---
+title: 백준일기1
+---
+# 백준일기 20200112
+
+오늘은 친구와 처음으로 백준으로 기초부터 공부했다. 그래서 오늘 한 코딩은 단계별로 시작해서 입출력과사칙연산 그리고  if문을 공부했다. 
+ 코딩한 부분들은 블로그에 업로드해서 두고두고 공부해야겠다. 
+
+    #2557입력값
+    #include<stdio.h>
+    int main()
+    {
+        printf("Hello World!");
+    }
+
+    #2557출력값
+    Hello World!
+
+
+-
+
+    #10718입력값
+    #include<stdio.h>
+    int main()
+    {
+        printf("강한친구 대한육군\n");
+        printf("강한친구 대한육군");
+    }
+
+    #10718출력값
+    강한친구 대한육군
+    강한친구 대한육군
+-
+
+    #10171입력값
+    #include<stdio.h>
+    int main()
+    {
+        printf("\\    /\\\n");
+        printf(" )  ( ')\n");
+         printf("(  /  )\n");
+        printf(" \\(__)|");
+    }
+
+    #10171출력값
+    \    /\
+     )  ( ')
+    (  /  )
+     \(__)|
+-
+    
+    #10172입력값
+    #include<stdio.h>
+    int main()
+    {
+        printf("|\\_/|\n");
+        printf("|q p|   /}\n");
+        printf("( 0 )\"\"\"\\\n");
+        printf("|\"^\"`    |\n");
+        printf("||_/=\\\\__|");
+    }
+
+    #10172출력값
+    |\_/|
+    |q p|   /}
+    ( 0 )"""\
+    |"^"`    |
+    ||_/=\\__|
+-
+
+    #10869입력값
+    #include<stdio.h>
+    int main()
+    {
+        int a,b;
+        scanf("%d %d",&a,&b);
+        printf("%d\n",a+b);
+        printf("%d\n",a-b);
+        printf("%d\n",a*b);
+        printf("%d\n",a/b);
+        printf("%d",a%b);
+    }   
+
+    #10869출력값
+    7 3 (입력하면)
+    10
+    4
+    21
+    2
+    1
+-
+
+    #2588입력값
+    #include<stdio.h>
+    int main()
+    {
+        int a,b;
+        scanf("%d %d",&a,&b);
+        printf("%d\n",a*(b%100%10));
+        printf("%d\n",a*(b%100/10));
+        printf("%d\n",a*(b/100));
+        printf("%d\n",a*b);
+    }    
+
+    #2588출력값
+    472 358(입력하면)
+    2360
+    3776
+    1416
+    181720
+-
+
+    #9498입력값
+    #include<stdio.h>
+    int main()
+    {
+        int a;
+        scanf("%d",&a);
+        if(90<=a)
+            printf("A");
+        else if(80<=a)
+            printf("B");
+        else if(70<=a)
+            printf("C");
+        else if(60<=a)
+            printf("D");
+        else
+            printf("F");
+    }   
+
+    #9498출력값
+    100(입력하면)
+    A
+    77(입력하면)
+    C
+-
+
+    #2753입력값
+    #include<stdio.h>
+    int main()
+    {
+        int a;
+        scanf("%d",&a);
+        if((a%100 != 0 && a%4==0) || (a%400==0)) 
+        printf("1");
+        else
+            printf("0");
+    
+    }
+
+    #2753출력값
+    2012(입력하면)
+    1
+    1999(입력하면)
+    0
+-
+
+    #2884입력값
+    #include<stdio.h>
+    int main()
+    {
+        int a,b;
+        scanf("%d %d",&a,&b);
+   
+        if(a>0 && b<45)
+            printf("%d %d",a-1,15+b);
+ 
+        else if(a==0 && b<45)
+            printf("%d %d",23,15+b);
+        
+        else
+            printf("%d %d",a,b-45);
+    }
+
+    #2884출력값
+    10 46(입력하면)
+    10 41
+    0 22(입력하면)
+    23 37
+
+마지막문제였던 알람시계에서 약간 헷갈리긴했지만 기본적인것부터 다시 공부하자는 의미로 백준을 시작했다. 두시간동안 했는데 생각보다 많이 하지는 못한것 같아 아쉬웠다. 점점더 난이도가 높아질텐데 내가 감당해낼 수 있을지도 의문이다. 백준하는 시간은 화요일 목요일로 정해두었다. 친구는 c++로 공부하고, 나는 c언어로 공부하기로 해서 서로 어떤 알고리즘으로 풀었는지 비교하고 서로 언어간에 다른점은 무엇인지 차차 같이 공부해나가기로 했다... 지금은 쉬운기본적인것만 코딩해서 그런지 재미있는데, 점점 어려워질것을 생각하니 막막하다....
+
+
+
+
+
+
+
+
+
+
+
 
