--- a/_posts/2020-01-14.md
+++ b/_posts/2020-01-14.md
@@ -1,1 +1,230 @@
+---
+title: 백준일기2
+---
+# 백준일기 20200114
+오늘은 친구와 for문과 while문코딩을 짜보았다.
+
+    #2737코드
+    #include<stdio.h>
+    int main()
+    {
+	    int n,i;
+	    scanf("%d",&n);
+	    for(i = 1;i<=9;i++)
+		    printf("%d * %d = %d\n",n,i,n*i);
+    }
+
+    #10950코드
+    #include<stdio.h>
+    int main()
+    {
+	    int n,i,a,b;
+	    scanf("%d",&n);
+	    for(i=0;i<n;i++)
+	    {
+		    scanf("%d %d",&a,&b);
+		    printf("%d\n",a+b);
+		
+	    }
+    }
+
+    #8393코드
+    #include<stdio.h>
+    int main()
+    {
+	    int n;
+	    int a = 0;
+	    scanf("%d",&n);
+	    for(int i = 1;i<=n;i++)
+	    {
+		    a += i;
+	    }
+	    printf("%d",a);
+	
+    }
+
+    #15552코드
+    #include<stdio.h>
+    int main()
+    {
+	    int n,a,b;
+	    scanf("%d",&n);
+	    while(n--)
+	    {
+		    scanf("%d %d",&a,&b);
+		    printf("%d\n",a+b);
+	    }
+        return 0;
+    }
+
+    #2741코드
+    #include<stdio.h>
+    int main()
+    {
+	    int n;
+	    scanf("%d",&n);
+	    for(int i = 1;i<=n;i++)
+	    {
+	    	printf("%d\n",i);
+	    }
+    }
+
+    #2742코드
+    #include<stdio.h>
+    int main()
+    {
+	    int n;
+	    scanf("%d",&n);
+	    while(n--)
+	    {
+		    printf("%d\n",n+1);
+	    }
+    }
+
+    #11021코드
+    #include<stdio.h>
+    int main()
+    {
+	    int n,a,b;
+	    scanf("%d",&n);
+	    for(int i = 1;i<=n;i++)
+	    {
+		    scanf("%d %d",&a,&b);
+		    printf("Case #%d: %d\n",i,a+b);
+		
+	    }
+    }
+
+    #11022코드
+    #include<stdio.h>
+    int main()
+    {
+	    int n,a,b;
+	    scanf("%d",&n);
+	    for(int i = 1;i<=n;i++)
+	    {
+		    scanf("%d %d",&a,&b);
+		    printf("Case #%d: %d + %d = %d\n",i,a,b,a+b);
+		
+	    }
+    }
+
+    #2438코드
+    #include<stdio.h>
+    int main()
+    {
+        int n;
+        scanf("%d",&n);
+        for(int i = 0;i<n;i++)
+        {
+            for(int j = 0; j<=i;j++)
+            {
+                printf("*");
+            }
+            printf("\n");
+        }
+    }
+
+    #2439코드
+    #include<stdio.h>
+    int main()
+    {
+	    int i,j,n;
+	    scanf("%d",&n);
+	
+	    for(i=1;i<=n;i++)
+	    {
+		    for(j=0;j<n-i;j++)
+			    printf(" ");
+		    for(j=0;j<i;j++)
+			    printf("*");
+		
+		    printf("\n");
+	    }
+	
+
+    }
+
+    #10871코드
+    #include<stdio.h>
+    int main()
+    {
+	    int i,n,a,b;
+	    scanf("%d %d",&n,&a);
+	    for(i=1;i<=n;i++)
+	    {
+		    scanf("%d",&b);
+		    if(b<a)
+		    {
+			    printf("%d ",b);
+		    }
+		
+	    }
+	
+
+    }
+
+    #10952코드
+    #include<stdio.h>
+    int main()
+    {
+	    int a,b;
+	    while(1)
+	    {
+		    scanf("%d %d",&a,&b);
+		    if(a+b == 0)
+			    break;
+		    printf("%d\n",a+b);
+	    }
+
+
+    }
+
+    #10951코드
+    #include<stdio.h>
+    int main()
+    {
+	    int a,b;
+	    while(scanf("%d %d",&a,&b)!=EOF)
+	    {
+		
+		    printf("%d\n",a+b);
+       
+	    }
+
+
+    }
+
+    #1110코드
+    #include<stdio.h>
+    int main()
+    {
+	    int n;
+	    int a,b,c,d,result;
+	    int count = 0;
+	    scanf("%d",&n);
+	    result = n;
+	
+	    while (1)
+	    {
+		    a=n/10;
+		    b=n%10;
+		    c=(a+b)%10;
+		    d=(b*10)+c;
+		    n = d;
+		    count += 1;
+		    if(d==result)
+			    break;
+
+	    }
+	    printf("%d",count);
+
+    }
+
+
+
+마지막문제가 살짝 생각하는데 시간이 오래걸렸지만 나름 나쁘지않다고생각했다. 다음주화요일에는 배열공부를 좀 해야겠다. 배열 다까먹었는데,,,, 주말에 공부좀 해야겠다. 
+   
+
+
 
