--- a/_posts/2020-01-14.md
+++ b/_posts/2020-01-14.md
@@ -223,7 +223,7 @@ title: 백준일기2
 
 
 
-마지막문제가 살짝 생각하는데 시간이 오래걸렸지만 나름 나쁘지않다고생각했다. 다음주화요일에는 배열공부를 좀 해야겠다. 배열 다까먹었는데,,,, 주말에 공부좀 해야겠다. 
+마지막문제가 살짝 생각하는데 시간이 오래걸렸지만 나름 나쁘지않다고생각했다. 다음주화요일에는 배열공부를 좀 해야겠다. 배열 다까먹었는데 주말에 공부좀 해야겠다. 
    
 
 
