--- a/_posts/2020-01-20-post6.md
+++ b/_posts/2020-01-20-post6.md
@@ -1,1 +1,198 @@
+---
+title: 백준일기3
+---
+# 백준일기 20200120
 
+오늘은 일차원 배열에대해 코딩을 해보았다..근데 어려웠다 마지막은 일차원배열도 아니고,,,
+
+    #10818코드
+    #include<stdio.h>
+    int main()
+    {
+	    int n,a;
+	    int min=1000000,max=-1000000;
+	    scanf("%d",&n);
+	    for(int i = 0;i<n;i++)
+	    {
+		    scanf("%d",&a);
+		    if(a>=max)
+			    max = a;
+		    if(a<=min)
+			    min = a;
+		
+	    }
+	    printf("%d %d",min,max);
+        return 0;
+    }
+-
+
+    #2562코드
+    #include<stdio.h>
+    int main()
+    {
+	    int n,max,a=0;
+	    int arr[9];
+	    max= arr[0];
+	    for(int i =0;i<9;i++)
+	    {
+		    scanf("%d",&arr[i]);
+		    if(arr[i]>max)
+		    {
+			    max = arr[i];
+			    a = i;
+		    }
+        }
+	    printf("%d\n%d\n",max,a+1);	
+    }
+-
+
+    #2577코드
+    #include<stdio.h>
+    int main()
+    {
+	    int a,b,c,gob,g;
+	    int arr[10]={0,};
+	    scanf("%d",&a);
+	    scanf("%d",&b);
+	    scanf("%d",&c);
+	    gob = a*b*c;
+	    while(gob != 0)
+	    {
+		    g=gob%10;
+		    gob = gob/10;
+		    arr[g] += 1;
+	    }
+	    for(int i = 0;i<10;i++)
+	    {
+		    printf("%d\n",arr[i]);
+	    }
+	    return 0;
+    }
+-
+
+    #3052코드
+    #include<stdio.h>
+    int main()
+    {
+	    int n=0;;
+	    int arr[42]={0,};
+	
+	    for(int i = 0;i<10;i++)
+	    {
+		    scanf("%d",&n);
+		    arr[n %42] += 1;
+	    }
+	    n = 0;
+	    for(int i = 0;i<42;i++)
+	    {
+		
+		    if(arr[i] != 0)
+			    n += 1;
+	    }
+	    printf("%d",n);
+	    return 0;
+	
+    }
+-
+
+    #1546코드
+    #include<stdio.h>
+    int main()
+    {
+	    int n;
+	    float arr[1000]={};
+	    int max=0;
+	    float sum = 0;
+	    scanf("%d",&n);
+	    for(int i = 0; i<n;i++)
+	    {
+		    scanf("%f",&arr[i]);
+	
+	    }
+	    for(int i = 0;i<n;i++)
+	    {
+		    if(max<=arr[i])
+		    {
+			    max = arr[i];
+		    }
+		
+	    }
+	    for(int i = 0;i<n;i++)
+	    {
+
+		    arr[i] = arr[i]/max*100/n;
+		    sum += arr[i];
+		
+	    }
+	    printf("%.2f",sum);
+
+    }
+-
+
+    #8958코드
+    #include<stdio.h>
+    #include<string.h>
+    int main()
+    {
+	    int n,i,j;
+	    int sum = 0;
+	    int cnt = 0;
+	    char arr[80];
+	
+	    scanf("%d",&n);
+	    for(i = 0;i<n;i++)
+	    {
+		    scanf("%s",arr);
+		    for(j = 0;j<strlen(arr);j++)
+		    {
+			    if(arr[j]=='O')
+			    {
+				    cnt++;
+				    sum += cnt;
+				
+			    }
+			    else if(arr[j]=='X')
+				    cnt = 0;
+			
+		    }
+		    printf("%d\n",sum);
+		    sum = 0;
+		    cnt = 0;
+	    }
+    }
+-
+
+    #4344코드
+    #include<stdio.h>
+    int main()
+    {
+	    int n,f;
+	    int arr[50][50];
+	    float sum;
+	    int cnt=0;
+	
+	    scanf("%d",&n);
+	    for(int i = 0;i<n;i++)
+	    {
+		    scanf("%d",&arr[i][0]);
+		    for(int j =1;j<=arr[i][0];j++)
+		    {
+			    scanf("%d",&arr[i][j]);
+			    sum += arr[i][j];
+		    }
+		    sum = sum /float(arr[i][0]);//평균구하기
+		    for(int j = 1;j<=arr[i][0];j++)
+		    {
+			    if(arr[i][j]>sum)
+			    {
+				    cnt++;
+			    }
+		    }
+		    float per = cnt /(float)arr[i][0] * 100;
+		    printf("%.3f%\n",per);
+		    sum= 0;
+		    cnt = 0;
+	    }
+    }
+
+오늘은 마지막 문제에서 오래걸렸다,,, 일차원배열을 사용해야하는데 어떻게 해야할지몰라서 이차원배열을 사용해서 복잡하게 코딩을 짠 것같다,,,,,,,,,블로그참고해서 일차원배열로 만들어봐야겟다.,,
