--- a/_posts/2020-01-24-post7.md
+++ b/_posts/2020-01-24-post7.md
@@ -1,1 +1,137 @@
+---
+title: 백준일기4
+---
+# 백준일기 20200121
+
+오늘은 함수 코드를 짜보았다... 요즘 좀 게을러지는듯하다,,코딩도 하기싫고 일본어도 점점 어려워져서ㅜㅜㅜ 이 코드 3개짜는데 2시간 30분넘게 걸린듯하다,,,,막막하네또,,,
+
+    #15596코드
+    long long sum(int *a, int n) 
+    {    
+	    long long ans = 0;
+        for(int i = 0;i<n;i++)
+        {
+            ans += a[i];
+        }
+	    return ans;
+    }
+-
+
+    #4673코드
+    #include <stdio.h>
+    int self_num();
+    int main() {
+        self_num();
+        return 0;
+    }
+    int self_num(){
+        int i, arr[10001] = {0}, res = 0;
+        for (i = 1; i <= 10000; i++){
+            if(i < 10){
+                res = i+i;
+                arr[res] = 1;
+            }
+            else if(i < 100){
+                res = i + (i/10) + (i%10);
+                arr[res] = 1;
+            }
+            else if(i < 1000){
+                res = i + (i/100) + ((i%100)/10) + ((i%100)%10);
+                arr[res] = 1;
+            }
+            else if(i < 10000){
+                res = i + (i/1000) + ((i%1000)/100) + (((i%1000)%100)/10) + (((i%1000)%100)%10);
+                if (res <= 10000)    arr[res] = 1;
+            }
+        }
+    
+        for(i = 1; i <= 10000; i++){
+            if(arr[i] != 1)
+                printf("%d\n", i);
+        }
+        return 0;
+    }
+-> 이 코드는 나름 내껄로 적었는데, 이 코드를 참고해서 적긴했는데 계속 틀렸다고 나와서 그냥 참고한 코드를 복붙해서 넣었다ㅜㅠㅜㅜ아니 뭐가 잘못된거지 나는 ㅠㅠ
+
+    #1065코드
+    #include<stdio.h>
+    int han(int n);
+    int main()
+    {
+	    int a;
+	    scanf("%d",&a);
+	    han(a);
+    }
+    int han(int n)
+    {
+	    int cnt = 99,hun,ten,one;
+	    if(n<100)
+		    printf("%d",n);
+	    else
+	    {
+	
+		    for(int i = 100;i<=n;i++)
+		    {
+			    hun = i/100;
+			    ten = i/10%10;
+			    one = i%10;
+			    if((hun-ten)==(ten-one))
+				    cnt += 1;
+		    }
+		    printf("%d",cnt);
+	    }
+	    return 0;
+		
+    }
+
+진짜 쉽지않았다ㅜㅠㅠㅠㅠㅠㅠㅠㅠ아아아 두번째꺼 하는데특히 많이걸렸다ㅠㅠ 데브에서는 내 코드가 되는데 왜 백준에 제출하면 안되는거라고 하는거라뀨ㅠ
+-
+ 일단 적어둬야겟다ㅠㅠ
+
+
+    #include<stdio.h>
+    int self_num()
+    {
+	    int arr[10001]={0};
+	    int num =0;
+	    for(int i = 1;i<=10000;i++)
+	    {
+		    if(i<10)
+		    {
+			    num = i+i;
+			    arr[num] = 1;
+		    }
+		    else if(i<100)
+		    {
+			    num = (i/10) + (i%10) + i;
+			    arr[num]=1;
+		    }
+		    else if(i<1000)
+		    {
+			    num = (i/100) + ((i&100)/10) + ((i%100)%10)+ i;
+			    arr[num]= 1;
+		    }
+		    else if(i<10000)
+		    {
+			    num = (i/1000)+ ((i%1000)/100)+ (((i%1000)%100)/10) + (((i%1000)%100)%10) + i;
+			    if(num<=10000)
+				arr[num]=1;
+		    }
+		
+	    }
+	    for(int i=1;i<=10000;i++)
+	    {
+		    if(arr[i] != 1)
+		    {
+			    printf("%d\n",i);
+		    }
+	    }
+	    return 0;
+    }
+    int main()
+    {
+	    self_num();
+	    return 0;
+    }
+
 
