--- a/_posts/2020-01-28-post8.md
+++ b/_posts/2020-01-28-post8.md
@@ -1,1 +1,144 @@
 
+---
+title: 백준일기5
+---
+# 백준일기 20200124
+
+오늘은 문자열을 풀었는데 하나를 못풀었다,,,,,나도몰라,,, 오늘 다섯개올리고 내일 다섯개 올려야겟다,,
+
+    #11654코드
+    #include<stdio.h>
+    int main()
+    {
+        char a;
+        scanf("%c",&a);
+    printf("%d",a);
+    }
+-
+
+    #11720코드
+    #include<stdio.h>
+    int main()
+    {
+	    int n;
+	    int sum = 0;
+	    char arr[100]={0,};
+	    scanf("%d",&n);
+	    scanf("%s",arr);
+	    for(int i = 0;i<n;i++)
+	    {
+		    sum += arr[i]-'0';
+	    }
+	    printf("%d",sum);
+    }
+-
+    #10809코드
+    #include<stdio.h>
+    #include<string.h>
+    int main()
+    {   
+	    char s[101];
+	    int arr[26]={0,};
+	    scanf("%s",s);
+	    for(int i = 0;i<26;i++)
+	    {
+		    arr[i]=-1;
+	    }
+	    for(int i = 0;i<strlen(s);i++)
+	    {
+            if(arr[s[i]-97]==-1)
+            {
+                arr[s[i]-97]=i;
+            }
+	    }
+	    for(int i = 0;i<26;i++)
+	    {
+		    printf("%d ",arr[i]);
+	    }
+
+    }
+-
+
+    #2675코드
+    #include<stdio.h>
+    #include<string.h>
+    int main()
+    {
+        int n,num;
+        char ch[21];
+        scanf("%d",&n);
+        for(int i = 0;i<n;i++)
+        {
+            scanf("%d",&num);
+            scanf("%s",ch);
+        
+            for(int j = 0;j<strlen(ch);j++)
+            {
+                for(int k = 0;k<num;k++)
+                {
+                    printf("%c",ch[j]);
+                }
+            }
+            printf("\n");
+        }
+    }
+-
+
+    #1157코드
+    #include<stdio.h>
+    #include<string.h>
+    int main()
+    {
+        char word[1000000];
+        int apb[26]={0,};
+        int cnt = 0;
+        int result = 0;
+        int i,j,max;
+
+        
+        scanf("%s",word);
+        
+        int len = strlen(word);
+        
+        for(i = 'a';i <= 'z';i++)
+        {
+            for(j = 0;j < len;j++)
+            {
+                if(i == word[j])
+                    apb[i-'a'] +=1;
+            }
+            
+        }
+        for(i = 'A';i <= 'Z';i++)
+        {
+            for(j = 0;j < len;j++)
+            {
+                if(i == word[j])
+                    apb[i-'A'] += 1;
+                
+            }
+        }
+        max = apb[0];
+        for(i =0;i<26;i++)
+        {
+            if(max<apb[i])
+            {
+                max = apb[i];
+                cnt = i;
+            }
+        }
+        for(i = 0;i<26;i++)
+        {
+            if(max == apb[i])
+            {
+                result += 1;
+            }
+        }
+        if(result>1)
+            printf("?\n");
+        else
+            printf("%c\n",cnt + 'A');
+        return 0;
+    }
+
+어려워,,,,,
