--- a/_posts/2020-01-28-post8-2.md
+++ b/_posts/2020-01-28-post8-2.md
@@ -1,1 +1,150 @@
 
+---
+title: 백준일기5
+---
+# 백준일기 20200124
+
+어제 쓰던거 마저써보겟다.
+
+    #1152코드
+    #include<stdio.h>
+    #include<string.h>
+    int main()
+    {
+        char str[1000001];
+        int cnt=1;
+        gets(str);
+        for(int i=0;i<strlen(str);i++)
+        {
+            if(str[i]==' ')
+            {
+                cnt += 1;
+            }
+        }
+        if(str[0] == ' ')
+        {
+            cnt --;
+        }
+        if(str[strlen(str)-1] == ' ')
+        {
+            cnt --;
+        }
+        printf("%d",cnt);
+
+
+    }
+-
+
+    #2908코드
+    #include<stdio.h>
+    int change(int n)
+    {
+        int one,ten,hun;
+        one = (n%100)%10;
+        ten = (n%100)/10;
+        hun = n/100;
+        n = one*100+ten*10+hun;
+        return n;
+        
+    }
+    int main()
+    {
+        int n1,n2;
+        int one,ten,hun;
+        scanf("%d",&n1);
+        scanf("%d",&n2);
+
+        if(change(n1)>change(n2))
+        {
+            printf("%d",change(n1));
+        }
+        else if(change(n1)<change(n2))
+        {
+            printf("%d",change(n2));
+        }
+    }
+-
+
+    #5622코드
+    #include<stdio.h>
+    #include<string.h>
+    int main()
+    {
+        char word[17];
+        int time=0;
+            
+        scanf("%s",word);
+        int len = strlen(word);
+        
+        for(int i = 0;i<len;i++)
+        {
+            if(word[i]=='A' || word[i]=='B' || word[i]=='C')
+                time += 3;
+            else if(word[i]=='D' || word[i]=='E' || word[i]=='F')
+                time += 4;
+            else if(word[i]=='G' || word[i]=='H' || word[i]=='I')
+                time += 5;
+            else if(word[i]=='J' || word[i]=='K' || word[i]=='L')
+                time += 6;
+            else if(word[i]=='M' || word[i]=='N' || word[i]=='O')
+                time += 7;
+            else if(word[i]=='P' || word[i]=='Q' || word[i]=='R' || word[i]=='S')
+                time += 8;
+            else if(word[i]=='T' || word[i]=='U' || word[i]=='V')
+                time += 9;
+            else if(word[i]=='W' || word[i]=='X' || word[i]=='Y' || word[i]=='Z')
+                time += 10;			
+        }
+        printf("%d",time);
+        
+    }
+-
+
+    #2941코드
+    #include<stdio.h>
+    #include<string.h>
+    int main()
+    {
+    char word[100];
+    scanf("%s",word);
+    int len = strlen(word);
+    int cnt = len;
+    for(int i = 0;i<len;i++)
+    {
+        if(word[i]=='=')
+        {
+            if(word[i-1]=='c' || word[i-1]=='s')
+            {
+                cnt --;
+            }
+            else if(word[i-1]=='z')
+            {
+                cnt --;
+                {
+                    if(word[i-2]=='d')
+                        cnt --;
+                    else
+                        cnt = cnt;
+                }
+            }
+        }
+        if(word[i]=='-')
+        {
+            if(word[i-1]=='c' || word[i-1]=='d')
+            {
+                cnt --;
+            }
+        }
+        if(word[i]=='j')
+        {
+            if(word[i-1]=='l' || word[i-1]=='n')
+            {
+                cnt --;
+            }
+        }
+    }
+    printf("%d",cnt);
+    
+    }
+
+마지막문제인 그룹단어 체커는 오늘 풀어봐야겠다,,,,
