--- a/_posts/2020-01-28-post8-2.md
+++ b/_posts/2020-01-28-post8-2.md
@@ -148,3 +148,41 @@ title: 백준일기5
     }
 
 마지막문제인 그룹단어 체커는 오늘 풀어봐야겠다,,,,
+
+오늘푼 체커 문제,,,
+    
+        #1315코드
+        #include<stdio.h>
+    #include<string.h>
+    int main()
+    {
+        int num,cnt=0;
+        char word[101];
+        scanf("%d",&num);
+        for(int i = 0;i<num;i++)
+        {
+            scanf("%s",word);
+            int len = strlen(word);
+            int group = 0;
+            for(int j = 0;j<len;j++)
+            {
+                for(int k = j+2;k<len;k++)
+                {
+                    if(word[j] != word[j+1] && word[j]==word[k])
+                    {
+                        group = 1;
+                        break;
+                    }
+                }
+            }
+            if(group == 0)
+            {
+                cnt ++;
+            }
+        
+        }
+        printf("%d",cnt);
+        
+    }
+-
+블로그를 참고하긴했는데 나도 이런 방법으로 풀고있었는데 나와서 다행이다ㅠㅠㅠㅠㅠㅠ
